{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "b73f9d62-b2c4-4f76-ba94-1e9e4871c00c",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "0f8d5595-d134-4648-aa7b-f0f33497b7a8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "783b152c-658a-40ab-bd00-48de9ade87de",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Sonar Knife",
                    "type": "Button",
                    "id": "1994eb1c-bbab-479d-980f-735bc4428e45",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Distraction Knife",
                    "type": "Button",
                    "id": "459d9d62-d4ec-4ae1-ab97-a4ad48817b95",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Teleport Knife",
                    "type": "Button",
                    "id": "404c1d29-b517-4123-8dd6-3b75ae4296b1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Crouch",
                    "type": "Button",
                    "id": "0120b432-70a6-4148-8aa5-30cc9714a0ff",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "55f0873e-a110-4ef0-8311-c152c8bdb113",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "AimKnife",
                    "type": "Button",
                    "id": "8c167ec3-7d7e-4b1d-a12b-ad9bd0b6a432",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ThrowKnife",
                    "type": "Button",
                    "id": "0456b4a4-9bb2-488f-8d26-fbe0ee55d693",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UnequipKnife",
                    "type": "Button",
                    "id": "b9bce079-7a6b-443e-ae73-e789438d6301",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ActivateKnife",
                    "type": "Button",
                    "id": "093ccfd0-263f-42d8-85b2-cf56f08249ff",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleDebug",
                    "type": "Button",
                    "id": "35594cc4-5aa4-4230-bbbd-253557d53ce9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DevCheatF1",
                    "type": "Button",
                    "id": "0a4de168-9f0b-451a-981a-deea339223e3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DevCheatF2",
                    "type": "Button",
                    "id": "f6573dd5-52d4-4783-b6f1-19f66db89e71",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DevCheatF3",
                    "type": "Button",
                    "id": "83238889-6fbc-42ca-a489-d48ec68a0325",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DevCheatF4",
                    "type": "Button",
                    "id": "f44a6940-0bc7-4b43-b4b8-8958ee51c259",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DevCheatF5",
                    "type": "Button",
                    "id": "0e2509fc-7a36-4d7e-b959-d7a97cf8b676",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DevCheatF6",
                    "type": "Button",
                    "id": "a0dd97fb-8298-42f6-af1d-52ed3b94435b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DevCheatF7",
                    "type": "Button",
                    "id": "b31f0f14-901e-4cc4-a41e-a7519c0520ef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "08851892-fa96-44ec-a6c9-7f0217e1e6c2",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sonar Knife",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cac1bd96-9a4f-4344-becd-ccf91deb61a1",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Distraction Knife",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fff88e04-258a-45cd-b117-2106f9626a52",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Distraction Knife",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "ed939104-7d30-4ff8-bc01-ababbb37dc58",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "6fa4cefa-b7f3-49c0-8082-c6ce23ce409b",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "AllControlSchemes",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "8d998780-1324-4d16-9797-58619eb5b3dc",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "AllControlSchemes",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "c94947ea-1d3a-4b4d-a554-5735eed5b0a5",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "AllControlSchemes",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "282cc1f4-04de-485f-9932-1014a8a4d4ed",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "AllControlSchemes",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "5ce0fd94-874f-41b7-8ac7-b95211d6fd6d",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "676bcc56-39ef-472b-8c35-b0024760a517",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fb9d7975-1c8a-46c1-8d8a-90c267d19e83",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AimKnife",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "486423a0-ade6-40a0-a032-ab7b6f3d4f14",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThrowKnife",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "204f9c42-2087-4108-a971-1a4e144f947b",
                    "path": "<Keyboard>/#(F)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UnequipKnife",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "97d817d3-96f1-4f0f-b90a-19697492096f",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Teleport Knife",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "446a018f-81ad-439d-a6e3-4c096343d8ad",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ActivateKnife",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aaa5c85c-0dff-49da-8e9d-20f5bf4358b8",
                    "path": "<Keyboard>/backquote",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleDebug",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bd2e1ad8-9d3f-4634-8ee0-42831ee1c1ad",
                    "path": "<Keyboard>/f1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DevCheatF1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e9bd8eb8-6e90-45dc-a1f7-5fe26c2ad06c",
                    "path": "<Keyboard>/f2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DevCheatF2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d5917601-8d40-4b08-ba4c-0ef258bf080a",
                    "path": "<Keyboard>/f3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DevCheatF3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5a9e6f5b-989c-4bde-acfb-8b25b3bd012f",
                    "path": "<Keyboard>/f4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DevCheatF4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "df9a35e2-07f8-420a-a504-97e865197445",
                    "path": "<Keyboard>/f5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DevCheatF5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "14488fb3-0850-41ab-9b04-91f94fbb1684",
                    "path": "<Keyboard>/f6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DevCheatF6",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1ea8b39a-f246-4630-890e-fb4408494c1c",
                    "path": "<Keyboard>/f7",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DevCheatF7",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6524d05e-6bf5-41fa-9efe-4db5fce1d477",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "AllControlSchemes",
            "bindingGroup": "AllControlSchemes",
            "devices": []
        }
    ]
}